# dataprocessing

./: .gitignore  .gitlab-ci.yml  Assert_Results.py  CompareModelicaPLECS.py  DynPh_EMT_Comparison.ipynb  LICENSE  README.md  Try.sh  mapping_busID_uuid.csv  pyproject.toml  rescase9.mat  setup.cfg  setup.py
Modelica/BasicGrids/: Slack_PiLine_PQLoad.mat  Slack_RxLine_PQLoad.mat  Slack_RxLine_PVNode.mat  Slack_Tra_Line_PQLoad.mat  Slack_ZLoad.mat
Modelica/SynchronousGenerator/: UnitTest_Eremia_3rdOrderModel_Euler_1ms.mat  UnitTest_Kundur_FullModel_Euler_1us.mat  UnitTest_Kundur_NoTransVoltModel_Euler_1ms.mat
Neplan/BasicGrids/: Slack_PiLine_PQLoad.rlf  Slack_RxLine_PVNode.rlf  Slack_Rxline_PQLoad.rlf  Slack_Tra_Line_PQLoad.rlf  Slack_ZLoad.rlf
Simulink/Circuits/: SL_IdealVS_R1.csv  SL_IdealVS_R2.csv  SL_IdealVS_RLC1.csv  SL_IdealVS_RXLine1.csv  SL_IdealVS_R_2.csv  SL_ResVS_PILine1.csv  SL_ResVS_RL1.csv  SL_ResVS_RL2.csv  SL_ResVS_RLC1.csv
SmallCircuits/: Example1.csv
dataprocessing/: Validationtools.py  __init__.py  calc.py  dpsim.py  plotdpsim.py  plotdpsim_deprecated.py  plottools.py  readtools.py  timeseries.py  validationtools.py
examples/: Comparison_Modelica_DPsim.py  DynamicPhasorBasics.ipynb  Examples.ipynb  plot_absolute_example.py
examples/Assert_Results/: Assert_Results.py
examples/CompareResults/: compare_madelica_neplan.py  compare_modelica_distaix.py  compare_modelica_neplan.py  compare_modelica_plecs.py
examples/Distaix/: read_distaix_examples.py
examples/NEPLAN/: read_NEPLAN.py  read_NEPLAN_example.py
examples/assertresults/: assertresults.py
examples/compareresults/: compare_dpsim_matpower.py  compare_modelica_distaix.py  compare_modelica_dpsim.py  compare_modelica_plecs.py  compare_neplan_dpsim.py  compare_neplan_dpsim_CIGRE-MV-NoTap.py  compare_neplan_dpsim_WSCC9bus.py
examples/readinresults/DPsim/: cim_ieee_9_bus.py  examples_plot.py
examples/readinresults/Modelica/: read_modelica_examples.py
examples/readinresults/NEPLAN/: read_NEPLAN_example.py
examples/readinresults/VILLAS/: readin.py
examples/sampledata/: CIGRE_MV_NoTap.rlf  case9.csv  mapping_busID_uuid.csv
villas/dataprocessing/: __init__.py  plottools.py  readtools.py  timeseries.py  validationtools.py
villas/web/: file.py  result.py  result_test.py
