
[metadata]
name = villas-dataprocessing
version = 0.3.2
authors = 
    name = Markus Mirz, Jan Dinkelbach, Steffen Vogel 
    email = acs-software@eonerc.rwth-aachen.de
description = VILLASdataprocessing is a collection of Python utitlities to support post-processing of power system simulation results.
readme = README.md
license = Apache-2.0
keywords = simulation power system real-time data processing
classifiers =
        Development Status :: 4 - Beta
        Topic :: Scientific/Engineering
        License :: OSI Approved :: Apache Software License
        Operating System :: MacOS :: MacOS X
        Operating System :: Microsoft :: Windows
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 3
dependencies =
        matplotlib
        numpy
        pandas
        scipy
        requests
        python-dateutil

[options]
zip_safe = True
include_package_data = True
packages = 
    villas.dataprocessing
    villas.web
#package_dir = 
#    villas
requires_python = ">=3.7"

#[options.packages.find]
#where=
#    villas

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/