
[metadata]
name = villas-dataprocessing
version = 0.3.2
author = Markus Mirz, Jan Dinkelbach, Steffen Vogel 
author_email = acs-software@eonerc.rwth-aachen.de
description = VILLASdataprocessing is a collection of Python utitlities to support post-processing of power system simulation results.
long_description =  file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
keywords = simulation power system real-time data processing
classifiers =
        Development Status :: 4 - Beta
        Topic :: Scientific/Engineering
        License :: OSI Approved :: Apache Software License
        Operating System :: MacOS :: MacOS X
        Operating System :: Microsoft :: Windows
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
packages = 
    villas.dataprocessing
    villas.web
requires_python = ">=3.7"
install_requires =
        matplotlib
        numpy
        pandas
        scipy
        requests
        python-dateutil
